# VisualScriptEngine

./: .gitignore  .travis.yml  Application.mm  CMakeLists.txt  CreateDevKit.py  CreatePackage.py  LICENSE.md  LICENSE.txt  README.md  appveyor.yml  codecov.yml  doxyfile  installdepswin.py  lgtm.yml  sonarqubewin.bat
.github/workflows/: build.yml
Documentation/TestFiles/: TestFile.vse
Make/DevKit/: BuildDevKit_VS.py
Make/GCC/: makefile
Make/VS/: VisualScript.sln
Sources/BuiltInNodes/: BI_ArithmeticUINodes.cpp  BI_ArithmeticUINodes.hpp  BI_BasicUINode.cpp  BI_BasicUINode.hpp  BI_BinaryOperationNodes.cpp  BI_BinaryOperationNodes.hpp  BI_BuiltInCommands.cpp  BI_BuiltInCommands.hpp  BI_BuiltInFeatures.cpp  BI_BuiltInFeatures.hpp  BI_BuiltInNodes.hpp  BI_InputUINodes.cpp  BI_InputUINodes.hpp  BI_NodeFeature.cpp  BI_NodeFeature.hpp  BI_NodeFeatureParameters.hpp  BI_NodeFeatureSet.cpp  BI_NodeFeatureSet.hpp  BI_UINodeLayout.cpp  BI_UINodeLayout.hpp  BI_UINodeLayouts.cpp  BI_UINodeLayouts.hpp  BI_UINodePanels.cpp  BI_UINodePanels.hpp  BI_UnaryFunctionNodes.cpp  BI_UnaryFunctionNodes.hpp  BI_UnaryOperationNodes.cpp  BI_UnaryOperationNodes.hpp  BI_ViewerUINodes.cpp  BI_ViewerUINodes.hpp
Sources/EmbeddingTutorial/: main.cpp
Sources/Localization/: English.po
Sources/MacOSAppSupport/: MAS_CocoaAppUtils.hpp  MAS_CocoaAppUtils.mm  MAS_IncludeCocoaHeaders.hpp  MAS_MACFileIO.hpp  MAS_MACFileIO.mm  MAS_MacOSAppUtils.hpp  MAS_MacOSAppUtils.mm  MAS_NSImageContext.hpp  MAS_NSImageContext.mm  MAS_NSImageLoader.hpp  MAS_NSImageLoader.mm  MAS_NSViewContext.hpp  MAS_NSViewContext.mm  MAS_NSViewContextBase.hpp  MAS_NSViewContextBase.mm  MAS_NSViewOffscreenContext.hpp  MAS_NSViewOffscreenContext.mm  MAS_NodeEditorNSViewControl.hpp  MAS_NodeEditorNSViewControl.mm  MAS_ParameterDialog.hpp  MAS_ParameterDialog.mm  MAS_StringUtils.hpp  MAS_StringUtils.mm
Sources/MacOSEmbeddingDemo/: Application.hpp  Application.mm  main.cpp
Sources/NodeEngine/: NE_Cache.hpp  NE_Checksum.cpp  NE_Checksum.hpp  NE_ConnectionInfo.cpp  NE_ConnectionInfo.hpp  NE_ConnectionList.hpp  NE_ConnectionManager.cpp  NE_ConnectionManager.hpp  NE_Debug.cpp  NE_Debug.hpp  NE_EvaluationEnv.cpp  NE_EvaluationEnv.hpp  NE_GenericValue.hpp  NE_InputSlot.cpp  NE_InputSlot.hpp  NE_LocString.cpp  NE_LocString.hpp  NE_Localization.cpp  NE_Localization.hpp  NE_MemoryStream.cpp  NE_MemoryStream.hpp  NE_MemoryXmlStream.cpp  NE_MemoryXmlStream.hpp  NE_Node.cpp  NE_Node.hpp  NE_NodeCollection.cpp  NE_NodeCollection.hpp  NE_NodeEngineTypes.hpp  NE_NodeEngineUtilities.cpp  NE_NodeEngineUtilities.hpp  NE_NodeGroup.cpp  NE_NodeGroup.hpp  NE_NodeGroupId.cpp  NE_NodeGroupId.hpp  NE_NodeGroupList.cpp  NE_NodeGroupList.hpp  NE_NodeId.cpp  NE_NodeId.hpp  NE_NodeList.cpp  NE_NodeList.hpp  (+36 more)
Sources/NodeEngineTest/: ArithmeticNodesTest.cpp  BinaryOperationNodesTest.cpp  CacheTest.cpp  ChecksumTest.cpp  CompatibitilityTest.cpp  DispatcherOutputSlotTest.cpp  EnableDisableFeatureTest.cpp  GeometryTest.cpp  InputNodesTest.cpp  ListValueNodeTest.cpp  LocalizationTest.cpp  MemoryStreamTest.cpp  MemoryXmlStreamTest.cpp  MultiInputSlotTest.cpp  NodeAlignmentTest.cpp  NodeConnectionTest.cpp  NodeEditorTest.cpp  NodeEditorVisualTest.cpp  NodeEditorVisualTestConnection.cpp  NodeEditorVisualTestGrouping.cpp  NodeEditorVisualTestNavigation.cpp  NodeEditorVisualTestParameterSettings.cpp  NodeEditorVisualTestRecalculation.cpp  NodeEditorVisualTestReconnection.cpp  NodeEditorVisualTestSlotMarkers.cpp  NodeEditorVisualTestWorkflow.cpp  NodeEnumerationTest.cpp  NodeManagerCompareTest.cpp  NodeManagerEventsTest.cpp  NodeManagerManualUpdateTest.cpp  NodeManagerMergeTest.cpp  NodeManagerSerializationTest.cpp  NodeManagerTest.cpp  NodeMultipleConnectionTest.cpp  NodeRecalculationTest.cpp  NodeTest.cpp  NodeValueCacheTest.cpp  NodeValueCombinationTest.cpp  NumberTypeNodeTest.cpp  OrderedMapTest.cpp  (+21 more)
Sources/NodeEngineTestApp/: DrawingControl.hpp  NodeEditorControl.hpp  ResultImage.hpp  TestAppNodes.hpp  main.cpp
Sources/NodeUIEngine/: NUIE_ClipboardHandler.cpp  NUIE_ClipboardHandler.hpp  NUIE_ClipboardState.cpp  NUIE_ClipboardState.hpp  NUIE_ConnectionInteractions.cpp  NUIE_ConnectionInteractions.hpp  NUIE_ContextDecorators.cpp  NUIE_ContextDecorators.hpp  NUIE_CopyPasteHandler.cpp  NUIE_CopyPasteHandler.hpp  NUIE_Drawing.cpp  NUIE_Drawing.hpp  NUIE_DrawingCacheKeys.cpp  NUIE_DrawingCacheKeys.hpp  NUIE_DrawingContext.cpp  NUIE_DrawingContext.hpp  NUIE_DrawingImage.cpp  NUIE_DrawingImage.hpp  NUIE_EnvironmentDecorators.cpp  NUIE_EnvironmentDecorators.hpp  NUIE_EventHandler.cpp  NUIE_EventHandler.hpp  NUIE_EventHandlers.cpp  NUIE_EventHandlers.hpp  NUIE_ExternalFileIO.cpp  NUIE_ExternalFileIO.hpp  NUIE_FeatureSet.cpp  NUIE_FeatureSet.hpp  NUIE_FeatureToggle.cpp  NUIE_FeatureToggle.hpp  NUIE_FileIO.cpp  NUIE_FileIO.hpp  NUIE_Geometry.cpp  NUIE_Geometry.hpp  NUIE_HashUtils.hpp  NUIE_IconId.cpp  NUIE_IconId.hpp  NUIE_InputEventHandler.cpp  NUIE_InputEventHandler.hpp  NUIE_InteractionHandler.cpp  (+91 more)
Sources/TestFramework/: SimpleTest.cpp  SimpleTest.hpp
Sources/WindowsAppSupport/: WAS_BitmapContextGdi.cpp  WAS_BitmapContextGdi.hpp  WAS_BitmapContextGdiplus.cpp  WAS_BitmapContextGdiplus.hpp  WAS_ClipboardHandler.cpp  WAS_ClipboardHandler.hpp  WAS_CustomControl.cpp  WAS_CustomControl.hpp  WAS_Direct2DContext.cpp  WAS_Direct2DContext.hpp  WAS_Direct2DContextBase.cpp  WAS_Direct2DContextBase.hpp  WAS_Direct2DImageLoader.cpp  WAS_Direct2DImageLoader.hpp  WAS_Direct2DOffscreenContext.cpp  WAS_Direct2DOffscreenContext.hpp  WAS_Direct2DUtils.cpp  WAS_Direct2DUtils.hpp  WAS_DrawingCacheKeys.cpp  WAS_FileMenu.cpp  WAS_FileMenu.hpp  WAS_GdiOffscreenContext.cpp  WAS_GdiOffscreenContext.hpp  WAS_GdiplusOffscreenContext.cpp  WAS_GdiplusOffscreenContext.hpp  WAS_GdiplusUtils.cpp  WAS_GdiplusUtils.hpp  WAS_HwndEventHandler.cpp  WAS_HwndEventHandler.hpp  WAS_HwndEventHandlers.cpp  (+28 more)
Tools/: CollectLocalizedStrings.bat  CollectLocalizedStrings.py  CppCheck.bat  CppCheck.py  GenerateIcons.py  GenerateLogoPngs.py  GetDependencies.py  OpenCppCoverage.bat  PVSStudio.bat  rules.pvsconfig
(+416 files in other folders)
